♻️ refactor: Standardized naming

--- a/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANSenderPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANSenderPage.razor
@@ -28,7 +28,7 @@
                     <MListItem @key="item.IPAddress"
                                OnClick="item.OnClick">
                         <MListItemIcon>
-                            <MIcon Class="list-item-icon">
+                            <MIcon Class="evident-icon">
                                 @(item.DeviceIcon)
                             </MIcon>
                         </MListItemIcon>
@@ -71,7 +71,7 @@
                 {
                     <MListItem>
                         <MListItemIcon>
-                            <MIcon Class="list-item-icon">
+                            <MIcon Class="evident-icon">
                                 mdi-close-circle-outline
                             </MIcon>
                         </MListItemIcon>
