--- a/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANTransferPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Export/LANTransfer/LANTransferPage.razor
@@ -9,7 +9,7 @@
         {
             <MListItem @key="item" OnClick="item.OnClick">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         @item.Icon
                     </MIcon>
                 </MListItemIcon>
@@ -36,7 +36,7 @@
        Rounded="@("lg")">
     <MListItem OnClick="()=>ShowConfig=true">
         <MListItemIcon>
-            <MIcon Class="list-item-icon">
+            <MIcon Class="evident-icon">
                 mdi-cog-transfer-outline
             </MIcon>
         </MListItemIcon>
