--- a/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DialogComponents/SelectLocationDialog.razor
@@ -26,7 +26,7 @@
                            Class="px-0"
                            OnClick="()=>SetSelectedLocation(item)">
                     <MListItemIcon>
-                        <MIcon Class="list-item-icon">
+                        <MIcon Class="evident-icon">
                             mdi-map-marker-outline
                         </MIcon>
                     </MListItemIcon>
