--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/LocationCard/LocationCard.razor
@@ -7,7 +7,7 @@
        Rounded="@("lg")">
     <MListItem>
         <MListItemIcon>
-            <MIcon Class="list-item-icon">
+            <MIcon Class="evident-icon">
                 mdi-map-marker-outline
             </MIcon>
         </MListItemIcon>
