--- a/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiListDialog.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MyComponents/MultiDisplay/MultiListDialog.razor
@@ -67,7 +67,7 @@
                                            Class="px-0"
                                            OnClick="item.OnClick">
                                     <MListItemIcon Class="my-3">
-                                        <MIcon Class="list-item-icon">
+                                        <MIcon Class="evident-icon">
                                             @(item.Icon)
                                         </MIcon>
                                     </MListItemIcon>
