--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/AboutPage.razor
@@ -54,7 +54,7 @@
                     <MListItem @key="item"
                                OnClick="item.OnClick">
                         <MListItemIcon>
-                            <MIcon Class="list-item-icon">
+                            <MIcon Class="evident-icon">
                                 @(item.Icon)
                             </MIcon>
                         </MListItemIcon>
