--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Backups/LocalBackupsPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Backups/LocalBackupsPage.razor
@@ -7,7 +7,7 @@
     <MList>
         <MListItem OnClick="()=>showBackups=true">
             <MListItemIcon>
-                <MIcon Class="list-item-icon">
+                <MIcon Class="evident-icon">
                     mdi-folder-arrow-down-outline
                 </MIcon>
             </MListItemIcon>
@@ -28,7 +28,7 @@
 
         <MListItem OnClick="Restore">
             <MListItemIcon>
-                <MIcon Class="list-item-icon">
+                <MIcon Class="evident-icon">
                     mdi-folder-arrow-up-outline
                 </MIcon>
             </MListItemIcon>
