--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/LocalExportPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Export/LocalExportPage.razor
@@ -7,7 +7,7 @@
     <MList TwoLine>
         <MListItem OnClick="Export">
             <MListItemIcon>
-                <MIcon Class="list-item-icon">
+                <MIcon Class="evident-icon">
                     mdi-export
                 </MIcon>
             </MListItemIcon>
@@ -28,7 +28,7 @@
 
         <MListItem OnClick="Import">
             <MListItemIcon>
-                <MIcon Class="list-item-icon">
+                <MIcon Class="evident-icon">
                     mdi-import
                 </MIcon>
             </MListItemIcon>
