--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/MinePage.razor
@@ -91,7 +91,7 @@
                     <MListItem @key="item"
                                OnClick="item.OnClick">
                         <MListItemIcon>
-                            <MIcon Class="list-item-icon">
+                                    <MIcon Class="evident-icon">
                                 @(item.Icon)
                             </MIcon>
                         </MListItemIcon>
