--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-emoticon-happy-outline
                     </MIcon>
                 </MListItemIcon>
@@ -35,7 +35,7 @@
 
             <MListItem OnClick="@(()=>showDiaryCardDateFormat=true)">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-calendar-clock
                     </MIcon>
                 </MListItemIcon>
