--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/IndexSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/IndexSetting.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-calendar-range-outline
                     </MIcon>
                 </MListItemIcon>
@@ -33,7 +33,7 @@
             <MDivider Class="mx-3"></MDivider>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-hand-wave-outline
                     </MIcon>
                 </MListItemIcon>
