--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/PermissionSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/PermissionSettingPage.razor
@@ -12,7 +12,7 @@
         <MList>
             <MListItem OnClick="OpenSystemPermissionSetting">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-camera-outline
                     </MIcon>
                 </MListItemIcon>
@@ -36,7 +36,7 @@
 
             <MListItem OnClick="OpenSystemPermissionSetting">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-sd
                     </MIcon>
                 </MListItemIcon>
