--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/SettingPage.razor
@@ -17,7 +17,7 @@
         <MList>
             <MListItem OnClick="@(()=>To("permissionSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-account-cog-outline
                     </MIcon>
                 </MListItemIcon>
@@ -33,7 +33,7 @@
 
             <MListItem OnClick="@(()=>showClearCache=true)">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-trash-can-outline
                     </MIcon>
                 </MListItemIcon>
@@ -62,7 +62,7 @@
         <MList>
             <MListItem OnClick="@(()=>To("indexSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-home-outline
                     </MIcon>
                 </MListItemIcon>
@@ -76,7 +76,7 @@
             <MDivider Class="mx-3"></MDivider>
             <MListItem OnClick="@(()=>To("diarySetting"))">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-notebook-outline
                     </MIcon>
                 </MListItemIcon>
@@ -90,7 +90,7 @@
             <MDivider Class="mx-3"></MDivider>
             <MListItem OnClick="@(()=>To("alertSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-alert-box-outline
                     </MIcon>
                 </MListItemIcon>
@@ -104,7 +104,7 @@
             <MDivider Class="mx-3"></MDivider>
             <MListItem OnClick="@(()=>To("diaryCardSetting"))">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-card-text-outline
                     </MIcon>
                 </MListItemIcon>
@@ -118,7 +118,7 @@
             <MDivider Class="mx-3 hidden-sm-and-down"></MDivider>
             <MListItem Class="hidden-sm-and-down">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-chart-line
                     </MIcon>
                 </MListItemIcon>
@@ -149,7 +149,7 @@
                Rounded="@("lg")">
             <MListItem OnClick="TryToPrivacyMode">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-hexagon-slice-3
                     </MIcon>
                 </MListItemIcon>
