--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/UserPage.razor
@@ -13,7 +13,7 @@
         <MList>
             <MListItem OnClick="()=>showEditAvatar=true">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-account-circle-outline
                     </MIcon>
                 </MListItemIcon>
@@ -35,7 +35,7 @@
 
             <MListItem OnClick="()=>showEditUserName=true">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-account-details-outline
                     </MIcon>
                 </MListItemIcon>
@@ -59,7 +59,7 @@
 
             <MListItem OnClick="()=>showEditSign = true">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-file-sign
                     </MIcon>
                 </MListItemIcon>
