--- a/src/SwashbucklerDiary.Rcl/Pages/PrivacyModePage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/PrivacyModePage.razor
@@ -12,7 +12,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-menu-open
                     </MIcon>
                 </MListItemIcon>
@@ -39,7 +39,7 @@
 
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-weather-night
                     </MIcon>
                 </MListItemIcon>
@@ -70,7 +70,7 @@
         <MList>
             <MListItem>
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-location-enter
                     </MIcon>
                 </MListItemIcon>
@@ -100,7 +100,7 @@
             {
                 <MListItem OnClick="()=>showPrivacyModeFunctionSearchKeyDialog=true">
                     <MListItemIcon>
-                        <MIcon Class="list-item-icon">
+                        <MIcon Class="evident-icon">
                             mdi-keyboard-variant
                         </MIcon>
                     </MListItemIcon>
@@ -126,7 +126,7 @@
             {
                 <MListItem OnClick="()=>showPrivacyModeEntrancePasswordDialog = true">
                     <MListItemIcon>
-                        <MIcon Class="list-item-icon">
+                        <MIcon Class="evident-icon">
                             mdi-key-outline
                         </MIcon>
                     </MListItemIcon>
@@ -162,7 +162,7 @@
                Rounded="@("lg")">
             <MListItem OnClick="SwitchPrivacyMode">
                 <MListItemIcon>
-                    <MIcon Class="list-item-icon">
+                    <MIcon Class="evident-icon">
                         mdi-swap-horizontal
                     </MIcon>
                 </MListItemIcon>
