--- a/src/SwashbucklerDiary.Rcl/Pages/SearchAppFunctionPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/SearchAppFunctionPage.razor
@@ -24,7 +24,7 @@
             <MList>
                 <MListItem>
                     <MListItemIcon>
-                        <MIcon Class="list-item-icon">
+                        <MIcon Class="evident-icon">
                             mdi-hexagon-slice-3
                         </MIcon>
                     </MListItemIcon>
@@ -49,7 +49,7 @@
             <MList>
                 <MListItem>
                     <MListItemIcon>
-                        <MIcon Class="list-item-icon">
+                        <MIcon Class="evident-icon">
                             @item.Icon
                         </MIcon>
                     </MListItemIcon>
