--- a/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
+++ b/src/SwashbucklerDiary.Maui/Pages/Backups/WebDAVBackups/WebDAVBackupsPage.razor
@@ -7,7 +7,7 @@
     <MList>
         <MListItem OnClick="()=>showConfig=true">
             <MListItemIcon>
-                <MIcon Class="list-item-icon">
+                <MIcon Class="evident-icon">
                     mdi-cog-sync-outline
                 </MIcon>
             </MListItemIcon>
@@ -33,7 +33,7 @@
 
         <MListItem OnClick="OpenUploadDialog">
             <MListItemIcon>
-                <MIcon Class="list-item-icon">
+                <MIcon Class="evident-icon">
                     mdi-cloud-arrow-up-outline
                 </MIcon>
             </MListItemIcon>
@@ -54,7 +54,7 @@
 
         <MListItem OnClick="OpenDownloadDialog">
             <MListItemIcon>
-                <MIcon Class="list-item-icon">
+                <MIcon Class="evident-icon">
                     mdi-cloud-arrow-down-outline
                 </MIcon>
             </MListItemIcon>
@@ -77,7 +77,7 @@
        Rounded="@("lg")">
     <MListItem>
         <MListItemIcon>
-            <MIcon Class="list-item-icon">
+            <MIcon Class="evident-icon">
                 mdi-file-outline
             </MIcon>
         </MListItemIcon>
@@ -153,7 +153,7 @@
                            Class="px-0"
                            OnClick="()=>Download(item)">
                     <MListItemIcon>
-                        <MIcon Class="list-item-icon">
+                        <MIcon Class="evident-icon">
                             mdi-file-outline
                         </MIcon>
                     </MListItemIcon>
