--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/LocationSettingPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/LocationSettingPage.razor
@@ -2,7 +2,7 @@
 @namespace SwashbucklerDiary.Rcl.Pages
 @inherits ImportantComponentBase
 
-<MyAppBar Title="@(I18n.T("Setting.Display.Diary.Location.Name"))"
+<MyAppBar Title="@(I18n.T("Location.Name"))"
           OnClick="NavigateToBack">
 </MyAppBar>
 
